<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <!-- Player Image -->

    <!-- Computer Image -->

    <!-- Rock Button -->

    <!-- Paper Button -->

    <!-- Scissors Button -->

    <!-- Reset Button -->

    <ImageView
        android:id="@+id/imagePlayer"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/player_image"
        android:src="@drawable/hand_draw" />



    <ImageView
        android:id="@+id/imageComputer"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="135dp"
        android:layout_toEndOf="@id/imagePlayer"
        android:contentDescription="@string/computer_image"
        android:src="@drawable/hand_draw" />


    <Button
        android:id="@+id/btnRock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagePlayer"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="18dp"
        android:text="@string/rock" />

    <Button
        android:id="@+id/btnPaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagePlayer"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:layout_toStartOf="@id/btnRock"
        android:text="@string/paper" />

    <Button
        android:id="@+id/btnScissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagePlayer"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="46dp"
        android:layout_toStartOf="@id/btnPaper"
        android:text="@string/scissors" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:layout_below="@id/btnRock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <!-- Score Label -->
    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_placeholder"
        android:textSize="24sp"
        android:layout_below="@id/btnReset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
